plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'UMC'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	runtimeOnly 'com.mysql:mysql-connector-j'

//	// queryDSL
//	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
//	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
//	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
//	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	//Querydsl 추가
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'  // Hibernate 6.0.2 이상

	implementation 'mysql:mysql-connector-java:8.0.33'  // MySQL 드라이버 추가

	// 에러 핸들러
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'org.antlr:antlr4-runtime:4.13.0'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'

	// Thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// Spring Security OAuth2 클라이언트 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
}

//tasks.named('test') {
//	useJUnitPlatform()
//}
//
//def querydslDir = "src/main/generated"
//
//sourceSets {
//	main.java.srcDirs += [ querydslDir ]
//}
//
//tasks.withType(JavaCompile) {
//	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
//}
//
//clean.doLast {
//	file(querydslDir).deleteDir()
//}
//
//clean {
//	delete fileTree(dir: 'src/main/generated', include: '**/*.java')
//}
//tasks.withType(JavaCompile) {
//	options.compilerArgs += [
//			'--add-opens',
//			'java.base/java.lang=ALL-UNNAMED',
//			'--add-opens',
//			'java.base/java.util=ALL-UNNAMED'
//	]
//}

tasks.named('test') {
	useJUnitPlatform()
}

// Querydsl 설정부
def generated = 'src/main/generated'

// querydsl QClass 파일 생성 위치를 지정
tasks.withType(JavaCompile) {
	options.getGeneratedSourceOutputDirectory().set(file(generated))
}

// java source set 에 querydsl QClass 위치 추가
sourceSets {
	main.java.srcDirs += [ generated ]
}

// gradle clean 시에 QClass 디렉토리 삭제
clean {
	delete file(generated)
}

// Heroku 설정
jar {
	manifest {
		attributes('Main-Class': 'com.fastcampus.projectboard.FastCampusProjectBoardApplication')
	}
}

//// Querydsl 설정부
//def generated = 'src/main/generated'
//
//querydsl {
//	jpa = true
//	querydslSourcesDir = generated
//}
//sourceSets {
//	main.java.srcDir generated
//}
//
//compileQuerydsl{
//	options.annotationProcessorPath = configurations.querydsl
//}
//
//configurations {
//	compileOnly {
//		extendsFrom annotationProcessor
//	}
//	querydsl.extendsFrom compileClasspath
//}
